--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Document</title>
 </head>
 <body>
+    <form id="saveLocalStorageForm">
+        <input id="inputSave" type="text" placeholder="Enter something">
+        <button type="submit">Submit</button>
+    </form>
+    <div id="savedInput"></div>
     
     <script src="main.js"></script>
 </body>
