--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
         <button type="submit">Submit</button>
     </form>
     <div id="savedInput"></div>
+    <br />
+    <div id="counter"></div>
     
     <script src="main.js"></script>
 </body>
