--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Local Storage Laboratory</title>
 </head>
 <body>
     <form id="saveLocalStorageForm">
@@ -14,6 +14,14 @@
     <div id="savedInput"></div>
     <br />
     <div id="counter"></div>
+    <br />
+    <form id="saveListForm">
+        <input id="inputList" type="text" placeholder="Enter something to add to your list">
+        <button type="submit">Submit</button>
+    </form>
+    <br />
+    <div id="unsaved"></div>
+    <ol id="savedList"></ol>
     
     <script src="main.js"></script>
 </body>
